--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -72,7 +72,7 @@
         <div class="ad-box">YOUR AD HERE.</div>
       </div>
 
-      <div id="footer"><%= enki_config[:title] %>. Valid <a href="http://validator.w3.org/check?uri=referer">HTML5</a> and <%= link_to "ATOM", "http://feedvalidator.org/check.cgi?url=#{enki_config[:url]}/posts.atom" %>. Powered by <a href="http://www.enkiblog.com" title="A Ruby on Rails blogging app for the fashionable developer">Enki</a>.</div>
+      <div id="footer"><%= enki_config[:title] %>. &#9400;  2013.</div>
     </div>
   </div>
 </body>
