--- a/app/views/admin/posts/_form.html.erb
+++ b/app/views/admin/posts/_form.html.erb
@@ -5,7 +5,7 @@
   <%= form.input :intro_text, :label => "Summary text", :hint => "Front page summary.", input_html: { class: "tinymce", rows: 12 } %>
   <%= form.input :body, input_html: {class: "tinymce", rows: 24 } -%>
   <%= form.input :tag_list, :as => 'string', :required => false, :hint => 'Comma separated: ruby, rails&hellip;'.html_safe -%>
-  <%= form.input :source_link -%>
+  <%= form.input :source_link, hint: "(include 'http://')" -%>
   <%= form.input :source_link_description -%>
   <p>Coming soon: image upload!</p>
   <%= form.input :image %>
