--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,8 +13,8 @@
 
 <div id="header">
   <div id="logo">
-      <div class="logo-element"><h1>LOGO</h1></div>
-      <div class="logo-element"><h1 id="page_heading"><%= link_to 'Quidnunc Beta', root_path %></h1></div>
+      <div class="logo-element"><%= image_tag 'Qlogo-F.png' %></div>
+      <div class="logo-element"><%= image_tag 'Dictionary.png' %></div>
   </div>
 
   <div id="hot-news">
