--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,8 +13,8 @@
 
 <div id="header">
   <div id="logo">
-      <div class="logo-element"><%= image_tag 'Qlogo-F.png' %></div>
-      <div class="logo-element"><%= image_tag 'Dictionary.png' %></div>
+    <%= link_to (image_tag 'Qlogo-F.png'), root_path, class: 'logo-element' %>
+    <%= link_to (image_tag 'Dictionary.png'), root_path, class: 'logo-element' %>
   </div>
 
   <div id="hot-news">
