--- a/app/views/admin/posts/_form.html.erb
+++ b/app/views/admin/posts/_form.html.erb
@@ -7,8 +7,8 @@
   <%= form.input :tag_list, :as => 'string', :required => false, :hint => 'Comma separated: ruby, rails&hellip;'.html_safe -%>
   <%= form.input :source_link, hint: "(include 'http://')" -%>
   <%= form.input :source_link_description -%>
-  <p>Coming soon: image upload!</p>
   <%= form.input :image %>
+  <%= form.input :caption %>
 <% end -%>
 <%= form.inputs do -%>
   <%= form.input :published_at_natural, :label => 'Published at', :as => 'string', :hint => 'Examples: now, yesterday, 1 hour from now, '.html_safe + link_to("etc".html_safe, "http://chronic.rubyforge.org/") + '. Leave blank for an unpublished draft.' -%>
