--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -29,7 +29,7 @@ body {
   margin: auto;
   margin-top: 24px;
   margin-bottom: 24px;
-  background-color: white;
+  background-color: #ccc;
   text-align: center;
   padding: 6px;
   width: 600px;
@@ -124,6 +124,11 @@ body {
   border-bottom: 1px solid #cabaa0;
 }
 
+#navbar a {
+  color: #f56b23;
+  hover: underline;
+}
+
 #navbar form {
   margin-left: -8px;
   display: inline
@@ -154,6 +159,7 @@ body {
   border: solid;
   border-width: 2px;
   border-color: gray;
+  background-color: #ccc;
 }
 
 #navigation .links {
