--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,7 +33,7 @@
     <div id="content">
 
     <div id="navbar">
-      SUBSCRIBE | <%= link_to 'CALENDAR', archives_path %> | SEND US DIRT | CONTACT US
+      <%= link_to 'SUBSCRIBE', signup_path %> | <%= link_to 'CALENDAR', archives_path %> | SEND US DIRT | CONTACT US
       <form method="get" id="sform" action="http://www.google.com/search">
         <input type="text" id="q" value="search QN" name="q">
         <input type="hidden" name="sitesearch" value="<%= enki_config[:url] %>">
@@ -68,9 +68,9 @@
           <% end %>
 
           <!-- Begin MailChimp Signup Form -->
-          <link href="//cdn-images.mailchimp.com/embedcode/slim-081711.css" rel="stylesheet" type="text/css">
+          <!-- <link href="//cdn-images.mailchimp.com/embedcode/slim-081711.css" rel="stylesheet" type="text/css"> -->
           <style type="text/css">
-            #mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif;  width:240px;}
+            #mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif;}
             /* Add your own MailChimp form style overrides in your site stylesheet or in this style block.
                We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
           </style>
