--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,7 @@
   <%= stylesheet_link_tag 'application' %>
   <%= javascript_include_tag 'application' %>
   <%= yield(:head) %>
+  <%= render partial: "layouts/ganalytics"  %>
 </head>
 <body>
 <div id="top-spacer"> </div>
