--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -59,27 +59,27 @@
           </ul>
 
           <% if @tags %>
-            <h2>Tag Cloud</h2>
+            <div class="tag-cloud">
+              <h2>Tags</h2>
 
-            <div>
-              <% tag_cloud(@tags, %w(small-tag med-tag large-tag)) do |tag, css_class| %>
-                <%= link_to tag.name, posts_path(:tag => tag.name), class: css_class %>
-              <% end %>
+              <div>
+                <% tag_cloud(@tags, %w(small-tag med-tag large-tag)) do |tag, css_class| %>
+                  <%= link_to tag.name, posts_path(:tag => tag.name), class: css_class %>
+                <% end %>
+              </div>
             </div>
           <% end %>
 
           <!-- Begin MailChimp Signup Form -->
-          <!-- <link href="//cdn-images.mailchimp.com/embedcode/slim-081711.css" rel="stylesheet" type="text/css"> -->
           <style type="text/css">
             #mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif;}
             /* Add your own MailChimp form style overrides in your site stylesheet or in this style block.
                We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
           </style>
-          <div id="mc_embed_signup">
+          <div id="mc_embed_signup-mini">
           <form action="http://herokuapp.us3.list-manage.com/subscribe/post?u=6e437c7449d16f6abc35c325e&amp;id=4a023806c7" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
             <label for="mce-EMAIL">Subscribe to our mailing list</label>
-            <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
-            <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+            <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button">
           </form>
           </div>
 
