remove calendar link

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,7 +34,7 @@
     <div id="content">
 
     <div id="navbar">
-      <%= link_to 'SUBSCRIBE', signup_path %> | <%= link_to 'CALENDAR', archives_path %> | SEND US DIRT | CONTACT US
+      <%= link_to 'SUBSCRIBE', signup_path %> | SEND US DIRT | CONTACT US
       <form method="get" id="sform" action="http://www.google.com/search">
         <input type="text" id="q" value="search QN" name="q">
         <input type="hidden" name="sitesearch" value="<%= enki_config[:url] %>">
