remove email format radio buttons from signup form

--- a/app/views/static_page/signup_form.html.erb
+++ b/app/views/static_page/signup_form.html.erb
@@ -1,4 +1,5 @@
 <%= stylesheet_link_tag "signup" %>
+
 <!-- Begin MailChimp Signup Form -->
 <div id="mc_embed_signup">
 <form action="http://herokuapp.us3.list-manage.com/subscribe/post?u=6e437c7449d16f6abc35c325e&amp;id=4a023806c7" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
@@ -17,16 +18,12 @@
   <label for="mce-LNAME">Last Name </label>
   <input type="text" value="" name="LNAME" class="" id="mce-LNAME">
 </div>
-<div class="mc-field-group input-group">
-    <strong>Email Format </strong>
-    <ul><li><input type="radio" value="html" name="EMAILTYPE" id="mce-EMAILTYPE-0"><label for="mce-EMAILTYPE-0">html</label></li>
-<li><input type="radio" value="text" name="EMAILTYPE" id="mce-EMAILTYPE-1"><label for="mce-EMAILTYPE-1">text</label></li>
-</ul>
-</div>
   <div id="mce-responses" class="clear">
     <div class="response" id="mce-error-response" style="display:none"></div>
     <div class="response" id="mce-success-response" style="display:none"></div>
-  </div>  <div class="clear"><input type="submit" value="SUBSCRIBE" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+  </div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+    <div style="position: absolute; left: -5000px;"><input type="text" name="b_6e437c7449d16f6abc35c325e_4a023806c7" value=""></div>
+  <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
 </form>
 </div>
 
