--- a/app/views/contact_mailer/contact_email.html.erb
+++ b/app/views/contact_mailer/contact_email.html.erb
@@ -4,6 +4,9 @@
     <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
   </head>
   <body>
-    <%= @message %>
+    <div>Name: <%= @name %></div>
+    <div>Email: <%= @email %></div>
+
+    <div>Message: <%= @message %></div>
   </body>
 </html>
