remove cheesy 'your ad here' text from app layout

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,7 +28,7 @@
   <div id="page_container">
 
     <div id="ad-container">
-      Your ad here!
+
     </div>
 
     <div id="content">
@@ -48,7 +48,7 @@
       </div>
 
       <div id="navigation">
-        <div class="ad-box">YOUR AD HERE.</div>
+        <div class="ad-box">.</div>
 
         <div class="links">
           <h2>Pages</h2>
@@ -86,7 +86,7 @@
           <!--End mc_embed_signup-->
         </div>
 
-        <div class="ad-box">YOUR AD HERE.</div>
+        <div class="ad-box">.</div>
       </div>
 
       <div id="footer"><%= enki_config[:title] %>. &#9400;  2013.</div>
