--- a/app/views/layouts/_ganalytics.html.erb
+++ b/app/views/layouts/_ganalytics.html.erb
@@ -4,7 +4,7 @@
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
   })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-  ga('create', 'UA-46014507-1', 'pacific-cove-7297.herokuapp.com');
+  ga('create', 'UA-46014507-1', 'quidnuncre.com');
   ga('send', 'pageview');
 
 </script>
