--- a/app/views/contact/new.html.erb
+++ b/app/views/contact/new.html.erb
@@ -13,6 +13,6 @@
       <div><%= form.label :message %></div>
       <%= form.text_area :message, rows: 12 %>
     <div>
-      <%= form.submit %></div>
+      <%= form.submit 'Send' %></div>
   </fieldset>
 <% end %>
