add link to Quidnunc RE twitter

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -36,7 +36,7 @@
         <input type="text" id="q" value="search QN" name="q">
         <input type="hidden" name="sitesearch" value="<%= enki_config[:url] %>">
       </form>
-      <div id="social-links">FOLLOW QUIDNUNC | Tw | FB | Li</div>
+      <div id="social-links">FOLLOW QUIDNUNC | <a href="https://twitter.com/quidnuncre">Tw</a> | FB | Li</div>
     </div>
 
 
