add RE to some Quidnuncs and remove tags from _post for #index

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -36,7 +36,7 @@
         <input type="text" id="q" value="search QN" name="q">
         <input type="hidden" name="sitesearch" value="<%= enki_config[:url] %>">
       </form>
-      <div id="social-links">FOLLOW QUIDNUNC | <a href="https://twitter.com/quidnuncre">Tw</a>
+      <div id="social-links">FOLLOW QUIDNUNC RE | <a href="https://twitter.com/quidnuncre">Tw</a>
        | <a href="https://www.facebook.com/pages/QuidnuncRE/738173212877583">FB</a> </div>
     </div>
 
