adjust colors for tags alternating colors in navbar

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -388,21 +388,21 @@ div.meta {
 }
 
 .large-tag:nth-of-type(even) {
-  color: #233;
+  color: #b53b01;
 }
 .large-tag:nth-of-type(odd) {
   color: #444;
 }
 
 .med-tag:nth-of-type(even) {
-  color: #233;
+  color: #b53b01;
 }
 .med-tag:nth-of-type(odd) {
   color: #444;
 }
 
 .small-tag:nth-of-type(even) {
-  color: #233;
+  color: #b53b01;
 }
 
 .small-tag:nth-of-type(odd) {
