--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -38,8 +38,8 @@
         <input type="text" id="q" value="search QN" name="q">
         <input type="hidden" name="sitesearch" value="<%= enki_config[:url] %>">
       </form>
-      <div id="social-links">FOLLOW QuidnuncRE | <a href="https://twitter.com/quidnuncre">Tw</a>
-       | <a href="https://www.facebook.com/pages/QuidnuncRE/738173212877583">FB</a> </div>
+      <div id="social-links">FOLLOW QuidnuncRE: <a href="https://twitter.com/quidnuncre"><%= image_tag 'Twitter_logo_blue.png', alt: 'Twitter' %></a>
+       <a href="https://www.facebook.com/pages/QuidnuncRE/738173212877583"><%= image_tag 'FB-f-Logo__blue_15.png', alt: 'Facebook' %></a> </div>
     </div>
 
 
