--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -26,7 +26,11 @@
     <li class="date">Posted on <%= format_post_date(@post.published_at) if @post.published? %>
       <%= updated_time(@post) %>
     </li>
-    <li>By <%= @post.author %></li>
+    <% if @post.author == "Russ Bleemer" %>
+      <li>By <%= mail_to 'russ.bleemer@quidnuncre.com', "Russ Bleemer" %></li>
+    <% else %>
+      <li>By <%= @post.author %></li>
+    <% end %>
     <% unless @post.tag_list.empty? -%>
       <li class="tags">Tagged <%= linked_tag_list(@post.tag_list) %></li>
     <% end -%>
