--- a/app/views/tipline/new.html.erb
+++ b/app/views/tipline/new.html.erb
@@ -2,7 +2,7 @@
 
 <div id="mc_embed_signup">
   <%= form_for @message, :url => contact_path, html: {id: "mc-embedded-subscribe-form", name: "mc-embedded-subscribe-form", class: "validate"} do |form| %>
-  <h2>Contact us!</h2>
+  <h2>Send us tips!</h2>
   <p>(all fields required)</p>
   <% if flash[:alert] %><div class="errors"><%= flash[:alert] %></div><% end %>
       <div class="mc-field-group">
