--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,3 +1,8 @@
+<% content_for(:page_title) do -%>
+  <%= post_title(@post) -%>
+<% end -%>
+
+
 <h2><%= link_to_post(@post) %></h2>
 
 <% if @post.image.present? %>
