--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -26,6 +26,13 @@
     <% end %>
 <% end %>
 
+<div class="sharing">
+  <span class='st_sharethis_large' displayText='ShareThis'></span>
+  <span class='st_facebook_large' displayText='Facebook'></span>
+  <span class='st_twitter_large' displayText='Tweet'></span>
+  <span class='st_email_large' displayText='Email'></span>
+</div>
+
 <div class="meta">
   <ul>
     <li class="date">Posted on <%= format_post_date(@post.published_at) if @post.published? %>
