--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
   <%= yield(:head) %>
   <%= render partial: "layouts/ganalytics"  %>
   <%= render partial: "layouts/doubleclick_head_code" %>
-  <script type="text/javascript">var switchTo5x=false;</script>
+  <script type="text/javascript">var switchTo5x=true;</script>
   <script type="text/javascript" src="http://w.sharethis.com/button/buttons.js"></script>
   <script type="text/javascript">stLight.options({publisher: "4febf84b-b341-487d-850e-28dfc000df89", doNotHash: false, doNotCopy: false, hashAddressBar: false});</script>
 </head>
