set sharethis hash address bar to false

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -69,4 +69,4 @@
 
 <script type="text/javascript">var switchTo5x=true;</script>
 <script type="text/javascript" src="http://w.sharethis.com/button/buttons.js"></script>
-<script type="text/javascript">stLight.options({publisher: "4febf84b-b341-487d-850e-28dfc000df89", doNotHash: false, doNotCopy: false, hashAddressBar: true});</script>
+<script type="text/javascript">stLight.options({publisher: "4febf84b-b341-487d-850e-28dfc000df89", doNotHash: false, doNotCopy: false, hashAddressBar: false});</script>
