first stab at 'hot headlines' boxes for real

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -74,7 +74,7 @@ body {
   margin-left: auto;
   margin-right: auto;
   height: 130px;
-  width: 900px;
+  width: 1000px;
   background-color: white;
   vertical-align: middle;
 }
@@ -109,11 +109,11 @@ body {
   float: left;
   margin: 12px;
   padding: 6px;
-  height: 84px;
-  width: 84px;
+  height: 94px;
+  width: 94px;
   border: solid;
   border-width: 2px;
-  border-color: gray;
+  border-color: #f56b23;
 }
 
 #navbar {
