--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,6 +19,13 @@
     <%= link_to (image_tag 'Dictionary.png'), root_path, class: 'logo-element' %>
   </div>
 
+  <% if @top_posts %>
+    <% @top_posts.each do |hot_post| %>
+      <div id="hot-news">
+        <div class="hot-headline"><%= hot_post.title %></div>
+      </div>
+    <% end %>
+  <% end %>
 
 </div>
 
