--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -5,6 +5,27 @@
 
 <h2><%= link_to_post(@post) %></h2>
 
+<div class="post-header">
+  <ul>
+
+    <li class="date">Posted at <%= format_post_date(@post.published_at) if @post.published? %>
+      <%= updated_time(@post) %>
+    </li>
+    <% if @post.author == "Russ Bleemer" %>
+      <li>By <%= mail_to 'russ.bleemer@quidnuncre.com', "Russ Bleemer" %></li>
+    <% else %>
+      <li>By <%= @post.author %></li>
+    <% end %>
+
+    Share this post:
+    <span class='st_sharethis'></span>
+    <span class='st_facebook'></span>
+    <span class='st_twitter'></span>
+    <span class='st_email'></span>
+    <a href="javascript:window.print()"><%= image_tag("silk/printer.png", alt: "print") %></a>
+
+</div>
+
 <% if @post.image.present? %>
   <div class="img-container">
     <div>
@@ -27,21 +48,6 @@
 <% end %>
 
 <div class="meta">
-  <ul>
-    Share this post:
-    <span class='st_sharethis'></span>
-    <span class='st_facebook'></span>
-    <span class='st_twitter'></span>
-    <span class='st_email'></span>
-
-    <li class="date">Posted on <%= format_post_date(@post.published_at) if @post.published? %>
-      <%= updated_time(@post) %>
-    </li>
-    <% if @post.author == "Russ Bleemer" %>
-      <li>By <%= mail_to 'russ.bleemer@quidnuncre.com', "Russ Bleemer" %></li>
-    <% else %>
-      <li>By <%= @post.author %></li>
-    <% end %>
     <% unless @post.tag_list.empty? -%>
       <li class="tags">Tagged <%= linked_tag_list(@post.tag_list) %></li>
     <% end -%>
