--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -16,7 +16,9 @@
     <% else %>
       <li>By <%= @post.author %></li>
     <% end %>
+</div>
 
+<div class="sharing-buttons">
     Share this post:
     <span class='st_sharethis'></span>
     <span class='st_facebook'></span>
