--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -13,8 +13,8 @@
   </div>
 <% end %>
 
-  <%= raw(post.intro_text) %>
-  <% if post.body %>
+  <%= raw(post.intro_text_html) %>
+  <% if post.body_html %>
     <%= link_to("[more...]", post_path(post)) %>
   <% end %>
 </div>
