--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -39,7 +39,7 @@
 </div>
 
 
-<%= raw(@post.body) %>
+<%= raw(@post.body_html) %>
 
 <% if @post.source_link != '' %>
   Source: <a href= <%= @post.source_link %> >
