--- a/app/assets/stylesheets/admin.css
+++ b/app/assets/stylesheets/admin.css
@@ -215,6 +215,29 @@ div.pagination a {
   color: #eeeeee;
 }
 
+div.img-attached {
+  border: 1px solid #bbb;
+  background-color: white;
+  padding: 8px;
+  margin: 8px;
+  margin-left: 200px;
+  width: 70%;
+  vertical-align: top;
+}
+
+.img-attached img {
+  margin: 2px;
+}
+
+.img-attached .img-area {
+  vertical-align: top;
+  font-size: 15px;
+}
+
+.img-attached .entry-area li {
+  margin-bottom: 2px;
+}
+
 /* --------- MESSAGING */
 .humanMsg .undo-link {
   display: none;
