--- a/app/views/admin/posts/_form.html.erb
+++ b/app/views/admin/posts/_form.html.erb
@@ -7,8 +7,19 @@
   <%= form.input :tag_list, :as => 'string', :required => false, :hint => 'Comma separated: ruby, rails&hellip;. No periods, as they cause problems.'.html_safe -%>
   <%= form.input :source_link, hint: "(include 'http://')" -%>
   <%= form.input :source_link_description -%>
-  <%= form.input :image %>
-  <%= form.input :caption %>
+  <div class="img-attached">
+    <% if @post && @post.image.exists? %>
+      <div class="img-area">
+        <%= image_tag(@post.image.url(:thumb)) %>
+        Current image file name:
+        <%= @post.image_file_name.to_s %>
+      </div>
+    <% end %>
+    <div class="entry-area">
+      <%= form.input :image, as: :file, html_options: {name: @post.image_file_name.to_s} %>
+      <%= form.input :caption %>
+    </div>
+  </div>
 <% end -%>
 <%= form.inputs do -%>
   <%= form.input :published_at_natural, :label => 'Published at', :as => 'string', :hint => 'Examples: now, yesterday, 1 hour from now, '.html_safe + link_to("etc".html_safe, "http://chronic.rubyforge.org/") + '. Leave blank for an unpublished draft.' -%>
