make byline text darker and make Post#updated? require at least one minute since publication

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -394,6 +394,10 @@ div.post-header {
   color: #cccccc;
   font-size: 9pt; }
 
+.post-header ul {
+  color: #555;
+}
+
 .archive-month .tags {
   color: #bbbbbb; }
 
