--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -545,6 +545,55 @@ span.error {
   padding: 5px;
 }
 
+/* pagination formatting experiment */
+
+.pagination {
+  background: white;
+  cursor: default;
+  /* self-clearing method: */ }
+.pagination a, .pagination span, .pagination em {
+  padding: 0.2em 0.5em;
+  display: block;
+  float: left;
+  margin-right: 3px; }
+.pagination .disabled {
+  color: #999999;
+  border: 1px solid #dddddd; }
+.pagination .current {
+  font-style: normal;
+  font-weight: bold;
+  background: #f56b23;
+  color: white;
+  border: 1px solid #f56b23; }
+.pagination a {
+  text-decoration: none;
+  color: #f56b23;
+  border: 1px solid #f56b23; }
+.pagination a:hover, .pagination a:focus {
+  color: #000033;
+  border-color: #000033; }
+.pagination .page_info {
+  background: #2e6ab1;
+  color: white;
+  padding: 0.4em 0.6em;
+  width: 22em;
+  margin-bottom: 0.3em;
+  text-align: center; }
+.pagination .page_info b {
+  color: #000033;
+  background: #f56b23;
+  padding: 0.1em 0.25em; }
+.pagination:after {
+  content: ".";
+  display: block;
+  height: 0;
+  clear: both;
+  visibility: hidden; }
+* html .pagination {
+  height: 1%; }
+*:first-child + html .pagination {
+  overflow: hidden; }
+
 /* Syntax */
 
 
