make meta information for posts on post#index darker color

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -391,7 +391,7 @@ div.post-header {
   padding-left: 0em;
   padding-bottom: 0.5em;
   display: inline;
-  color: #cccccc;
+  color: #555;
   font-size: 9pt; }
 
 .post-header ul {
