add 'join us' mailer form

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -45,7 +45,8 @@
     <div id="navbar">
       <%= link_to 'SUBSCRIBE', signup_path %> |
       <%= link_to('SEND US TIPS', tipline_path) %> |
-      <%= link_to('CONTACT US', contact_path) %>
+      <%= link_to('CONTACT US', contact_path) %> |
+      <%= link_to('JOIN US', join_us_path) %>
       <form method="get" id="sform" action="http://www.google.com/search">
         <input type="text" id="q" value="search QN" name="q">
         <input type="hidden" name="sitesearch" value="<%= enki_config[:url] %>">
