fix formatting for navbar after adding join us

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -57,6 +57,7 @@
 
 
       <div id="main">
+        <p><% if flash[:notice] %><p><%= flash[:notice] %></p><% end %><p>
         <%= yield %>
       </div>
 
