--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -123,19 +123,28 @@ body {
   margin-top: -16px;
   margin-left: -16px;
   margin-right: -54px;
-  padding: 6px;
+  padding: 9px;
   padding-left: 14px;
   font-size: 13px;
-  border-bottom: 1px solid #cabaa0;
+  border-bottom: 1px solid #a29980;
+  -webkit-border-radius: 2px;
+  -moz-border-radius: 2px;
+  border-radius: 2px;
+
 }
 
 #navbar a {
-  color: #f56b23;
+  font-weight: lighter;
+  color: white;
+  padding: 5px 12px 5px 12px;
+  margin-right: 5px;
+  background-color: #f56b23;
   hover: underline;
+  width: 200px;
 }
 
 #navbar form {
-  margin-left: 86px;
+  margin-left: 4px;
   display: inline
 }
 
@@ -145,6 +154,11 @@ body {
   font-size: 12px;
   float: right;
   margin: 5px 64px;
+}
+
+#navbar #social-links a {
+  background-color: white;
+  padding: 0;
 }
 
 #navbar input {
