--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -43,9 +43,9 @@
     <div id="content">
 
     <div id="navbar">
-      <%= link_to 'SUBSCRIBE', signup_path %> |
-      <%= link_to('SEND US TIPS', tipline_path) %> |
-      <%= link_to('CONTACT US', contact_path) %> |
+      <%= link_to 'SUBSCRIBE', signup_path %>
+      <%= link_to('SEND US TIPS', tipline_path) %>
+      <%= link_to('CONTACT US', contact_path) %>
       <%= link_to('JOIN US', join_us_path) %>
       <form method="get" id="sform" action="http://www.google.com/search">
         <input type="text" id="q" value="search QN" name="q">
