--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -1,5 +1,18 @@
 <h2><%= link_to_post(post) %></h2>
 
+<div class="post-header">
+  <ul>
+    <li class="date">Posted at <%= format_post_date(post.published_at) if post.published? %>
+      <%= updated_time(post) %>
+    </li>
+    <% if post.author == "Russ Bleemer" %>
+      <li>By <%= mail_to 'russ.bleemer@quidnuncre.com', "Russ Bleemer" %></li>
+    <% else %>
+      <li>By <%= post.author %></li>
+    <% end %>
+  </ul>
+</div>
+
 <div class="entry-body">
 
 <% if post.image.present? %>
@@ -20,14 +33,6 @@
 </div>
 <div class="meta">
   <ul>
-    <li class="date">Posted at <%= format_post_date(post.published_at) if post.published? %>
-      <%= updated_time(post) %>
-    </li>
-    <% if post.author == "Russ Bleemer" %>
-      <li>By <%= mail_to 'russ.bleemer@quidnuncre.com', "Russ Bleemer" %></li>
-    <% else %>
-      <li>By <%= post.author %></li>
-    <% end %>
     <li><%= link_to('', post_path(post, anchor: "disqus_thread")) %></li>
   </ul>
 </div>
